log
Thu 28 Mar 2024 04:27:29 PM UTC: 
 list.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:21: error: invalid initializer
   32 |   List nuevaLista = (List *) malloc(sizeof(List));
      |                     ^
In file included from list.c:3,
                 from test.c:5:
list.c:34:21: error: invalid operands to binary != (have ‘List’ {aka ‘struct List’} and ‘void *’)
   34 |   assert(nuevaLista != NULL);
      |                     ^~
list.c:34:21: error: invalid operands to binary != (have ‘List’ {aka ‘struct List’} and ‘void *’)
   34 |   assert(nuevaLista != NULL);
      |                     ^~
In file included from test.c:5:
list.c:35:13: error: invalid type argument of ‘->’ (have ‘List’ {aka ‘struct List’})
   35 |   nuevaLista->head = NULL;
      |             ^~
list.c:36:13: error: invalid type argument of ‘->’ (have ‘List’ {aka ‘struct List’})
   36 |   nuevaLista->tail = NULL;
      |             ^~
list.c:37:13: error: invalid type argument of ‘->’ (have ‘List’ {aka ‘struct List’})
   37 |   nuevaLista->current = NULL;
      |             ^~
list.c:38:10: error: incompatible types when returning type ‘List’ {aka ‘struct List’} but ‘List *’ {aka ‘struct List *’} was expected
   38 |   return nuevaLista;
      |          ^~~~~~~~~~
list.c:39:1: error: control reaches end of non-void function [-Werror=return-type]
   39 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1000ead
Thu 28 Mar 2024 04:28:22 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:32:51: error: expected ‘)’ before ‘;’ token
   32 |   List nuevaLista = ((List *) malloc(sizeof(List));
      |                     ~                             ^
      |                                                   )
list.c:32:21: error: invalid initializer
   32 |   List nuevaLista = ((List *) malloc(sizeof(List));
      |                     ^
list.c:39:1: error: expected ‘,’ or ‘;’ before ‘}’ token
   39 | }
      | ^
test.c:448:5: error: ‘main’ is normally a non-static function [-Werror=main]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:468:1: error: expected declaration or statement at end of input
  468 | }
      | ^
In file included from test.c:5:
list.c:32:8: error: unused variable ‘nuevaLista’ [-Werror=unused-variable]
   32 |   List nuevaLista = ((List *) malloc(sizeof(List));
      |        ^~~~~~~~~~
test.c:469: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:448:5: error: ‘main’ defined but not used [-Werror=unused-function]
  448 | int main( int argc, char *argv[] ) {
      |     ^~~~
In file included from test.c:5:
list.c:86:6: error: ‘cleanList’ defined but not used [-Werror=unused-function]
   86 | void cleanList(List * list) {
      |      ^~~~~~~~~
list.c:77:8: error: ‘popBack’ defined but not used [-Werror=unused-function]
   77 | void * popBack(List * list) {
      |        ^~~~~~~
list.c:64:6: error: ‘pushBack’ defined but not used [-Werror=unused-function]
   64 | void pushBack(List * list, void * data) {
      |      ^~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
bd727e8
Thu 28 Mar 2024 04:28:53 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
891d89d
